(fix) [SD-4257] "create" button gets out of place when long highlight page is selected and editor is opened

--- a/styles/less/buttons.less
+++ b/styles/less/buttons.less
@@ -3,13 +3,16 @@
 /* new button colors */
 
 
-@btnDefaultColor : rgba(0,0,0,15%);
-@btnInfoColor : @sd-blue;
-@btnGreenColor : #169f70;
+@btnDefaultColor: rgba(0,0,0,15%);
+@btnInfoColor: @sd-blue;
+@btnGreenColor: #169f70;
 @btnSuccessColor: #53a93f;
-@btnDangerColor : #c83929;
-@btnInverseColor : #141414;
-@btnCustomColor : #666;
+@btnDangerColor: #c83929;
+@btnInverseColor: #141414;
+@btnCustomColor: #666;
+@btnPublishColor: #01579B;
+@btnPublishPlusColor: #623b7a;
+
 
 
 //mixin
@@ -89,6 +92,14 @@
 }
 .btn-custom {
     .buttonStates(@btnCustomColor, @white);
+    white-space: nowrap;
+}
+.btn-publish {
+    .buttonStates(@btnPublishColor, @white);
+    white-space: nowrap;
+}
+.btn-publish-plus {
+    .buttonStates(@btnPublishPlusColor, @white);
     white-space: nowrap;
 }
 
